[package]
name = "ggst-api"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11" }
tokio = { version = "1", features = ["full"] }
regex = "1.5"
lazy_static = "1.4.0"
chrono = { package = "chrono", version = "0.4" }
derivative = "2"
serde_crate = { package = "serde", version = "1.0", features = ["derive"], optional = true }

[features]
serde = ["chrono/serde", "serde_crate"]
